[package]
name = "hello_wasm"
authors = ["Yuta Okafuji <ofuji.works@gmail.com>"]
description = "A sample project with wasm-pack"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/ofuji-works/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"